--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -20,7 +20,7 @@
         }
     }
     &__medailon {
-        margin-right: 2rem;
+        //margin-right: 2rem;
     }
     &__item {
         text-transform: uppercase;
